--- a/_sass/_universal.scss
+++ b/_sass/_universal.scss
@@ -12,6 +12,10 @@ html {
 	margin-top: 25px;
 }
 
+p {
+	font-size: 15px;
+}
+
 span {
 	font-size: 15px;
 }
